# bravo_in_contact_manipulation

./: CMakeLists.txt  package.xml  setup.py
launch/: in_contact_env.launch
scripts/: hole_spawner.py
scripts/bravo_in_contact_manipulation/: env_manager.py  model.py  utils.py
sdfs/: hole_holder.sdf
sdfs/plates/: circle_30mm_plate.sdf
